apps/bgd/base/bgd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rawad
  name: rawad
  namespace: rawad
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rawad
---
