apps/bgd/base/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rawad
  name: rawad
  namespace: rawad
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: rawad
    weight: 100
